Everything is ready to review

--- a/career.html
+++ b/career.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        <div class="header-content text-white">
+        <div class="career-header-content text-white">
             <div class="container">
                 <div class="row">
                     <div class='col-lg-6'>
