--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
             </div>
         </nav>
 
-        <div class="header-content text-white">
+        <div class="home-header-content text-white">
             <div class="container">
                 <div class="row">
                     <div class='col-12 col-md-6'>
