--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white">
+        <div class="about-header-content container text-white">
             <div class="container">
                 <div class="row">
                     <div class='col-12 col-lg-6'>
