--- a/whatwedo.html
+++ b/whatwedo.html
@@ -69,7 +69,7 @@
             </div>
         </nav>
 
-        <div class="header-content text-white">
+        <div class="whatwedo-header-content text-white">
             <div class="container">
                 <div class="row">
                     <div class='col-md-6'>
