font changed to normal

--- a/home.html
+++ b/home.html
@@ -114,20 +114,20 @@
                         <br class="d-none d-md-block">
                         owner, you've come a long way fast
                     </h4>
-                    <p class="text-blue mb-5 mb-lg-4 fw-light">
+                    <p class="text-blue mb-5 mb-lg-4">
                         You're poised for a success. You've invested time, money and
                         effort in people, technology and systems to increase efficiency.
                     </p>
                     <h4 class="text-orange fw-bolder mb-2">So why isn't the business performing?</h4>
-                    <p class="text-blue mb-4 mb-lg-2 fw-light">Geidans Solutions are problem solvers and process fixers
+                    <p class="text-blue mb-4 mb-lg-2">Geidans Solutions are problem solvers and process fixers
                         for SMEs
                     </p>
-                    <p class="text-blue mb-4 mb-lg-2 fw-light">
+                    <p class="text-blue mb-4 mb-lg-2">
                         We believe in empowering SMEs by impoving how they work.
                         The reward to you is growth. The reward to us is making that happen for you.
                         If it's thinkable, it's possible.
                     </p>
-                    <p class="text-blue fw-light">
+                    <p class="text-blue">
                         If your business processes are holding you back from what
                         you could achieve - we can help you take on the big boys
 
