--- a/home.html
+++ b/home.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Passion+One:wght@400;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Passion+One:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Geidans Solutions</title>
 </head>
 
-<body>
+<body class="home-page">
     <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
         <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
@@ -158,13 +158,23 @@
                     straight away<span class="right-quote">&#8221;</span>
                 </h2>
             </div>
-            <p class="text-blue mb-5 fw-light">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
-                excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
-                similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
-                Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
-                deleniti! Lorem ipsum dolor
-            </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="text-blue mb-5">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur
+                            enim ut
+                            excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit
+                            blanditiis
+                            similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam
+                            perspiciatis sit?
+                            Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo
+                            error
+                            deleniti! Lorem ipsum dolor
+                        </p>
+                    </div>
+                </div>
+            </div>
             <div class="d-flex mb-3">
                 <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
                 <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
@@ -191,15 +201,15 @@
                         Why Us?
                     </h4>
                     <p class="text-orange d-block d-lg-none fw-bolder mb-3">Why us?</p>
-                    <p class="text-blue mb-0 mb-lg-3 fw-light">
+                    <p class="text-blue mb-0 mb-lg-3">
                         We believe if you control your processes, you control your business.
                     </p>
-                    <p class="text-blue mb-3 fw-light">
+                    <p class="text-blue mb-3">
                         We streamline your systems, optimise your processes, in-crease your efficiency
                         increase your efficiency. Putting you back in control. And we just happen to do it
                         through powerful technology and software.
                     </p>
-                    <p class="text-blue mb-4 fw-light">
+                    <p class="text-blue mb-4">
                         Every Geidans Solutions project has shown a positive ROI
                         Within the first 12 months. You see tangible benefits
                         to your bottom line fast.
