--- a/whyus.html
+++ b/whyus.html
@@ -174,7 +174,7 @@
                     straight away<span class="right-quote">&#8221;</span>
                 </h2>
             </div>
-            <p class="text-blue mb-5 fw-light">
+            <p class="text-blue mb-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
                 excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
                 similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
