footer copyright fixed

--- a/whyus.html
+++ b/whyus.html
@@ -268,23 +268,28 @@
     <!-- Footer end -->
 
     <!-- Section Copyright start -->
-    <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
-        <div class="container">
+    <div class="footer-copyright px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
-                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
+                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Privacy & GDPR
                             </a>
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Terms
                             </a>
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Legal Notice
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
+                            <a href="#"
+                                class="text-decoration-none text-white d-block ps-3 lh-1 py-1 py-lg-0 ">Accessibility
+                            </a>
                         </div>
                     </div>
                 </div>
